<resources>
    <string name="app_name">MyApp1</string>
    <string name="btn1">Crear Cuenta</string>
    <string name="btn2">BOTON2</string>
    <string name="t1">Nombre de la aplicación</string>

    //Pantalla login

    <string name="login">INICIAR SESION</string>
    <string name="edt_email">INGRESAR CORREO</string>
    <string name="edt_pass">RECUPERAR CONTRASEÑA</string>
    <string name="btn_login">INGRESAR</string>
    <string name="btn_gmail">CORREO GMAIL</string>
    <string name="btn_cuenta">CREAR CUENTA</string>

    //Crear cuenta

    <string name="create_count">CREAR CUENTA</string>
    <string name="edt_name">Ingrese su nombre</string>
    <string name="edt_apellido">Ingrese sus apellidos</string>
    <string name="edt_gmail">Ingrese su correo electrónico</string>
    <string name="edt_num">Ingrese su número teléfonico</string>
    <string name="edt_pass1">Ingrese su contraseña</string>
    <string name="btn_registrar">REGISTRARSE</string>
    <string name="btn_login2">LOGIN</string>

    //Recuperar contraseña
    <string name="recuperar_pass">RECUPERAR CONTRASEÑA</string>
    <string name="solitar_gmail">Ingrese su correo electrónico</string>
    <string name="btn_boton">Recuperar</string>
</resources>