<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Crear_cuenta"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/create_count"
        android:textAlignment="center"
        android:textColor="@color/sena"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="189dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/logo_sena"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/edt_name"
        android:inputType="text"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="276dp" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/edt_apellido"
        android:inputType="text"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="334dp" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/edt_gmail"
        android:inputType="text"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="392dp" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/edt_num"
        android:inputType="text"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="451dp" />

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/edt_pass1"
        android:inputType="text"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="510dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/sena"
        android:text="@string/btn_registrar"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="587dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/sena"
        android:text="@string/btn_login2"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="635dp" />
</LinearLayout>