<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recuperar_pass"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/recuperar_pass"
        android:textAlignment="center"
        android:textColor="@color/sena"
        android:textSize="27sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="189dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="173dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo_sena"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/solitar_gmail"
        android:inputType="text"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="276dp" />

    <Button
        android:id="@+id/btn_recuperar"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/sena"
        android:text="@string/btn_boton"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="635dp" />

</LinearLayout>